--- a/Covariance Matrix.ipynb
+++ b/Covariance Matrix.ipynb
@@ -5,7 +5,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas\n",
+    "\n",
+    "def covariance_(set1,set2):\n",
+    "    x_mean = np.mean(set1)\n",
+    "    y_mean = np.mean(set2)\n",
+    "    total_sum = 0\n",
+    "    for x,y in zip(set1,set2):\n",
+    "       total_sum += x-x_mean*y-y_mean\n",
+    "    covariance = total_sum/(len(set1)-1)\n",
+    "    return covariance\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
