--- a/Covariance Matrix.ipynb
+++ b/Covariance Matrix.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import pandas\n",
     "\n",
-    "def covariance_(set1,set2):\n",
+    "def covariance(set1,set2):\n",
     "    x_mean = np.mean(set1)\n",
     "    y_mean = np.mean(set2)\n",
     "    total_sum = 0\n",
@@ -20,6 +20,29 @@
     "\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def covariance_matrix(x,y,z):\n",
+    "    matricies = [[covariance(x,x),covariance(x,y),covariance(x,z)],\n",
+    "               [covariance(y,x),covariance(y,y),covariance(y,z)],\n",
+    "               [covariance(z,x),covariance(z,y),covariance(z,z)]]\n",
+    "    return matricies\n",
+    "x = np.array([1,1,1,1])\n",
+    "y = np.array([1,2,3,4])\n",
+    "z = np.array([1,1,2,3])\n",
+    "print([[covariance(x,x),covariance(x,y),covariance(x,z)],\n",
+    "       [covariance(y,x),covariance(y,y),covariance(y,z)],\n",
+    "      [covariance(z,x),covariance(z,y),covariance(z,z)]])\n",
+    "cov_matrix_xyz = covariance_matrix(x,y,z)\n",
+    "test_cov_xyz = np.cov([x,y,z])\n",
+    "print(cov_matrix_xyz)\n",
+    "print(test_cov_xyz)"
    ]
   }
  ],
